Test for incompatible changes is now part of the build. See http://wiki.netbeans.org/wiki/view/SignatureTest All important .sig files updated to state of release55. Those that did not have stable API then, removed from CVS.