@@ -20,7 +20,9 @@
 package org.netbeans.nbbuild;
 
 import java.io.File;
+import java.io.IOException;
 import java.util.StringTokenizer;
+import java.util.zip.ZipFile;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Task;
 import org.apache.tools.ant.taskdefs.Java;
@@ -105,6 +107,30 @@ public class Sigtest extends Task {
             throw new BuildException("Cannot find JAR with testing infrastructure: " + sigtestJar);
         }
         
+        try {
+            ZipFile zip = new ZipFile(sigtestJar);
+            String c1 = "com/sun/tdk/signaturetest/Setup.class";
+            if (zip.getEntry(c1) != null) {
+                zip.close();
+                tdk();
+                return;
+            }
+            String c2 = "org/netbeans/apitest/Main.class";
+            if (zip.getEntry(c2) != null) {
+                zip.close();
+                apitest();
+                return;
+            }
+            zip.close();
+            
+            throw new BuildException("Cannot find " + c1 + " nor " + c2 + " in " + sigtestJar);
+        } catch (IOException ex) {
+            throw new BuildException(ex);
+        }
+        
+    }
+    
+    private void tdk() {
         Java java = (Java) getProject().createTask("java");
         Path sigtestPath = new Path(getProject());
         sigtestPath.setLocation(sigtestJar);
@@ -167,6 +193,88 @@ public class Sigtest extends Task {
         }
         int returnCode = java.executeJava();
         if (returnCode != 95) {
+            if (failOnError && outputFile == null) {
+                throw new BuildException("Signature tests return code is wrong (" + returnCode + "), check the messages above", getLocation());
+            }
+            else {
+                log("Signature tests return code is wrong (" + returnCode + "), check the messages above");
+            }
+        } else {
+            if (outputFile != null) {
+                outputFile.delete();
+            }
+        }
+    }
+    
+    private void apitest() {
+        Java java = (Java) getProject().createTask("java");
+        java.setFork(true);
+        Path sigtestPath = new Path(getProject());
+        sigtestPath.setLocation(sigtestJar);
+        
+        
+        java.setClasspath(sigtestPath);
+        java.setClassname("org.netbeans.apitest.Main");
+        Commandline.Argument arg;
+        arg = java.createArg();
+        arg.setValue("-FileName");
+        arg = java.createArg();
+        arg.setValue(fileName.getAbsolutePath());
+        arg = java.createArg();
+        arg.setValue("-Classpath");
+        arg = java.createArg();
+        arg.setPath(classpath);
+        if (action.getValue().equals("generate")) {
+            arg = java.createArg();
+            arg.setValue("-setup");
+        } else if (action.getValue().equals("check")) {
+            // no special arg for check
+        } else if (action.getValue().equals("strictcheck")) {
+            arg = java.createArg();
+            arg.setValue("-maintenance");
+        } else {
+            throw new BuildException("Unknown action: " + action);
+        }
+        
+        
+        arg = java.createJvmarg();
+        arg.setValue("-XX:PermSize=32m");
+        arg = java.createJvmarg();
+        arg.setValue("-XX:MaxPermSize=200m");
+            
+        File outputFile = null;
+        String s = getProject().getProperty("sigtest.output.dir");
+        if (s != null) {
+            File dir = getProject().resolveFile(s);
+            dir.mkdirs();
+            outputFile = new File(dir, fileName.getName().replace(".sig", "").replace("-", "."));
+            log(outputFile.toString());
+            java.setOutput(outputFile);
+        }
+        
+        
+        log("Packages: " + packages);
+        StringTokenizer packagesTokenizer = new StringTokenizer(packages,",");
+        while (packagesTokenizer.hasMoreTokens()) {
+            String p = packagesTokenizer.nextToken().trim();
+            String prefix = "-PackageWithoutSubpackages "; // NOI18N
+            //Strip the ending ".*"
+            int idx = p.lastIndexOf(".*");
+            if (idx > 0) {
+                p = p.substring(0, idx);
+            } else {
+                idx = p.lastIndexOf(".**");
+                if (idx > 0) {
+                    prefix = "-Package "; // NOI18N
+                    p = p.substring(0, idx);
+                }
+            }
+            
+            arg = java.createArg();
+            arg.setLine(prefix + p);
+        }
+        int returnCode = java.executeJava();
+        if (returnCode != 0) {
             if (failOnError && outputFile == null) {
                 throw new BuildException("Signature tests return code is wrong (" + returnCode + "), check the messages above", getLocation());
             }
